# pactlers

./: .pre-commit-config.yaml  99-pactlers.rules  Cargo.toml  README.md  bacon.toml
.github/workflows/: build.yml
conf/: 99-pactlers.rules  pactlers.service
pactlers/: Cargo.toml
pactlers-fw/: Cargo.toml  README.md
pactlers-fw/src/: adcs.rs  error.rs  main.rs  tewma.rs
pactlers-lib/: Cargo.toml
pactlers-lib/src/: lib.rs
pactlers/src/: error.rs  main.rs  pactl.rs  sercon.rs
src/: main.rs
