[package]
name = "pactlers-fw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-rc.2", default-features = false, features = ["derive"] }
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.3"
embedded-hal = "0.2.7"
nb = "1.0.0"
pactlers-lib = { path = "../pactlers-lib" }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtic-monotonic = "1.0.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
stm32-usbd = "0.6.0"
stm32f1 = { version = "0.15.1", features = ["stm32f103"] }
stm32f1xx-hal = { version = "0.9.0", features = ["stm32f103"] }
systick-monotonic = "1.0.1"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
usb-device = "0.2.8"
usbd-serial = "0.1.1"
