[package]
name = "pactlers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
bincode = { version = "2.0.0-rc", default-features = false, features = ["derive"] }
bytes = "1.3.0"
futures = "0.3.25"
pactlers-lib = { path = "../pactlers-lib" }
serialport = "4.1.0"
thiserror = "1.0.38"
tokio = { version = "1.22.0", features = ["full"] }
tokio-serial = { version = "5.4.4", features = ["tokio-util"] }
tokio-util = { version = "0.7.4", features = ["full"] }
